<resources>
    <string name="app_name">MyPsikolog</string>
    <string name="sign_in">Sign In</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Search Doctor</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_wishlist">Wishlist</string>
    <string name="menu_my_order">My order</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_help">Help</string>
    <string name="menu_log_out">Log Out</string>
    <string name="my_order">My Order</string>
    <string name="diagnoze">Diagnoze</string>
    <string name="hello">Hello,</string>
    <string name="user_name_example">Selena</string>
    <string name="categories">Categories</string>
    <string name="consult">Consult</string>
    <string name="help">Help</string>
    <string name="welcome_desc">Welcome to MyPsikolog A Platform To Share Your Life Stories</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_and_last_name">First and Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="age">Age</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="male">Male</string>
    <string name="my_purpose">My Purpose</string>
    <string name="desc_purpose">We recommend that you take the time to fill in the problem you are currently facing. We\'ve given you space to write down your thoughts, but feel free to take your journal and let Your Higher Self speak to you as you reflect on these topics. The more intentions you have, the more answers you will receive.</string>
    <string name="result">Result</string>
    <string name="psycholog">Psycholog</string>
    <string name="dr_name">Dr. Catherine</string>
    <string name="dr_experience">Experience </string>
    <string name="dr_experienceyear"> years </string>
    <string name="rp">Rp.</string>
    <string name="dr_chat_price"> / chat</string>
    <string name="dr_video_call_price"> / video call</string>
    <string name="booking">Booking</string>
    <string name="add_to_wishlist">Add to wishlist</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="psychologist">Psychologist</string>
    <string name="about_text">About</string>
    <string name="patient_text">Patient</string>
    <string name="patient_value">10k</string>
    <string name="rating_value">4.5</string>
    <string name="experience_value">5</string>
    <string name="book_now">Book Now</string>
    <string name="rating_text">Rating</string>
    <string name="select_date_text">Select Date -</string>
    <string name="select_time_text">Select Time</string>
    <string name="date_value">Mei 2021</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="_10am_11am">10am - 11am</string>
    <string name="_2pm_3pm">2pm - 3pm</string>
    <string name="_7pm_8pm">7pm - 8pm</string>
    <string name="book_for_chat">Book for chat</string>
    <string name="book_for_video_chat">Book for Video Chat</string>
    <string name="buy">Buy</string>
</resources>