<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:elevation="4dp"
    android:padding="10dp">

    <Button
        android:id="@+id/buyButton"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="116dp"
        android:background="@drawable/btn_sign_up"
        android:backgroundTint="@color/sky_blue"
        android:elevation="4dp"
        android:text="@string/buy"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/radioPriceGroup"
        app:layout_constraintTop_toTopOf="@+id/radioPriceGroup" />

    <ImageView
        android:id="@+id/popupBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RadioGroup
        android:id="@+id/radioDateGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/month_year"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:clipToPadding="false"
            android:elevation="4dp"
            android:padding="10dp"
            android:text="@string/mon"
            android:textColor="@drawable/radio_text_color"
            android:textSize="12sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:clipToPadding="false"
            android:elevation="4dp"
            android:padding="10dp"
            android:text="@string/tue"
            android:textColor="@drawable/radio_text_color"
            android:textSize="12sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:clipToPadding="false"
            android:elevation="4dp"
            android:padding="10dp"
            android:text="@string/wed"
            android:textColor="@drawable/radio_text_color"
            android:textSize="12sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:clipToPadding="false"
            android:elevation="4dp"
            android:padding="10dp"
            android:text="@string/thu"
            android:textColor="@drawable/radio_text_color"
            android:textSize="12sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:clipToPadding="false"
            android:elevation="4dp"
            android:padding="10dp"
            android:text="@string/fri"
            android:textColor="@drawable/radio_text_color"
            android:textSize="12sp" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioPriceGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/radioTimeGroup"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/radioTimeGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioTimeGroup">

        <RadioButton
            android:id="@+id/chatType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:buttonTint="@color/sky_blue"
            android:checked="true"
            android:padding="10dp"
            android:text="@string/book_for_chat"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/videoType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:buttonTint="@color/sky_blue"
            android:padding="10dp"
            android:text="@string/book_for_video_chat"
            android:textColor="@color/black"
            android:textSize="12sp" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioTimeGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/textView12"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:elevation="4dp"
            android:padding="10dp"
            android:text="@string/_10am_11am"
            android:textColor="@drawable/radio_text_color"
            android:textSize="12sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:elevation="4dp"
            android:padding="10dp"
            android:text="@string/_2pm_3pm"
            android:textColor="@drawable/radio_text_color"
            android:textSize="12sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:elevation="4dp"
            android:padding="10dp"
            android:text="@string/_7pm_8pm"
            android:textColor="@drawable/radio_text_color"
            android:textSize="12sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/select_date_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/select_time_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/radioDateGroup"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/radioDateGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioDateGroup" />

    <TextView
        android:id="@+id/month_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_value"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>