<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:id="@+id/doctor_image"
        android:layout_width="145dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/doctor1"
            tools:ignore="ContentDescription" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/doctor_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/dr_name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/doctor_image"
        app:layout_constraintStart_toEndOf="@+id/doctor_image"
        app:layout_constraintTop_toTopOf="@+id/doctor_image"
        app:layout_constraintVertical_bias="0.034" />

    <TextView
        android:id="@+id/doctor_experience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/dr_experience"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/doctor_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/doctor_name"
        app:layout_constraintTop_toBottomOf="@+id/doctor_name" />


    <ImageView
        android:id="@+id/doctor_rating_1"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/doctor_experience"
        app:layout_constraintTop_toBottomOf="@+id/doctor_experience"
        app:srcCompat="@drawable/ic_baseline_star_24"
        app:tint="@color/sky_blue"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/doctor_rating_2"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/doctor_rating_1"
        app:layout_constraintStart_toEndOf="@+id/doctor_rating_1"
        app:layout_constraintTop_toTopOf="@+id/doctor_rating_1"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_star_24"
        app:tint="@color/sky_blue"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/doctor_rating_3"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/doctor_rating_2"
        app:layout_constraintStart_toEndOf="@+id/doctor_rating_2"
        app:layout_constraintTop_toTopOf="@+id/doctor_rating_2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_star_24"
        app:tint="@color/sky_blue"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/doctor_rating_4"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/doctor_rating_3"
        app:layout_constraintStart_toEndOf="@+id/doctor_rating_3"
        app:layout_constraintTop_toTopOf="@+id/doctor_rating_3"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_star_24"
        app:tint="@color/sky_blue"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/doctor_rating_5"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/doctor_rating_4"
        app:layout_constraintStart_toEndOf="@+id/doctor_rating_4"
        app:layout_constraintTop_toTopOf="@+id/doctor_rating_4"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_star_24"
        app:tint="@color/sky_blue"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/chat_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/dr_chat_price"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/doctor_rating_5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/doctor_rating_1"
        app:layout_constraintTop_toBottomOf="@+id/doctor_rating_3" />

    <TextView
        android:id="@+id/video_call_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/dr_video_call_price"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/chat_price"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/chat_price"
        app:layout_constraintTop_toBottomOf="@+id/chat_price" />

    <Button
        android:id="@+id/booking_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/sky_blue"
        android:text="@string/booking"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/doctor_image"
        app:layout_constraintStart_toStartOf="@+id/video_call_price"
        app:layout_constraintTop_toBottomOf="@+id/video_call_price"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/wishlist_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/white"
        android:text="@string/add_to_wishlist"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/booking_button"
        app:layout_constraintStart_toEndOf="@+id/booking_button"
        app:layout_constraintTop_toTopOf="@+id/booking_button"
        tools:ignore="SmallSp" />


</androidx.constraintlayout.widget.ConstraintLayout>